feat: Add links to  CSS, AngularJS and app JS file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="assets/calculator.css">
+  <script src="assets/angular.min.js"></sctipt>
+  <script src="assets/calculator.js"></script>
   <title>Calculator</title>
 </head>
 
