feat: Add main HTML structure for the app

--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 
 <body>
 
-  <!-- HTML markup goes here -->
+  <div id="myCalculator">
+
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+
+    <form>
+      <div></div>
+      <div></div>
+      <div></div>
+    </form>
+
+  </div>
 
 </body>
 
