--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
     </main>
 
     <form>
-      <div></div>
+      <div>
+        <h4>Lumens</h4>
+        <p>Brightness <br>of bulb</p>
+        <select>
+          <option value="600">600</option>
+          <option value="900">900</option>
+        </select>
+      </div>
       <div></div>
       <div></div>
     </form>
