feat: Add kWh cost and usage inputs

--- a/index.html
+++ b/index.html
@@ -54,8 +54,16 @@
           <option value="900">900</option>
         </select>
       </div>
-      <div></div>
-      <div></div>
+      <div>
+        <h4>kWh</h4>
+        <p>Kilowatt-hour cost</p>
+        <input type="number" value="12"> pence
+      </div>
+      <div>
+        <h4>Hours</h4>
+        <p>Usage <br>per day</p>
+        <input type="number" value="3">
+      </div>
     </form>
 
   </div>
