--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
   <div id="myCalculator">
 
     <main>
-      <section>
+      <section class="inc">
         <div>
           <h4>Incandescent</h4>
           <p>100.0</p>
           <p>13.14</p>
         </div>
       </section>
-      <section>
+      <section class="hal">
         <div>
           <h4>Halogen</h4>
           <p>72.0</p>
           <p>9.46</p>
         </div>
       </section>
-      <section>
+      <section class="cfl">
         <div>
           <h4>CFL</h4>
           <p>23.4</p>
           <p>3.07</p>
         </div>
       </section>
-      <section>
+      <section class="led">
         <div>
           <h4>LED</h4>
           <p>20.0</p>
