feat: Define AngularJS application and controller

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
-<html>
+<html ng-app="myCalculator">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/calculator.css">
-  <script src="assets/angular.min.js"></sctipt>
+  <script src="assets/angular.min.js"></script>
   <script src="assets/calculator.js"></script>
   <title>Calculator</title>
 </head>
 
 <body>
 
-  <div id="myCalculator">
+  <div id="myCalculator" ng-controller="CalculatorController">
 
     <main>
       <section class="inc">
