feat: Set default input values

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       <div>
         <h4>kWh</h4>
         <p>Kilowatt-hour cost</p>
-        <input type="number" value="12"> pence
+        <input type="number" ng-model="currentCost" value="{{currentCost}}"> pence
       </div>
       <div>
         <h4>Hours</h4>
         <p>Usage <br>per day</p>
-        <input type="number" value="3">
+        <input type="number" ng-model="currentHours" value="{{currentHours}}">
       </div>
     </form>
 
