feat: Calculate wattage usage for remaining bulbs

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       <section class="hal">
         <div>
           <h4>Halogen</h4>
-          <p>72.0</p>
+          <p>{{halWattage}}</p>
           <p>9.46</p>
         </div>
       </section>
       <section class="cfl">
         <div>
           <h4>CFL</h4>
-          <p>23.4</p>
+          <p>{{cflWattage}}</p>
           <p>3.07</p>
         </div>
       </section>
       <section class="led">
         <div>
           <h4>LED</h4>
-          <p>20.0</p>
+          <p>{{ledWattage}}</p>
           <p>2.63</p>
         </div>
       </section>
