feat: Give the app a main title

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="stylesheet" href="assets/calculator.css">
   <script src="assets/angular.min.js"></script>
   <script src="assets/calculator.js"></script>
-  <title>Calculator</title>
+  <title>Bulb Cost Calculator</title>
 </head>
 
 <body>
 
   <div id="myCalculator" ng-controller="CalculatorController">
-
+    <h1>Bulb Cost Calculator</h1>
     <main>
       <section class="inc">
         <div>
