feat: Add sub-heading to explain what the app is about

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-
   <div id="myCalculator" ng-controller="CalculatorController">
     <h1>Bulb Cost Calculator</h1>
+    <h2>Compare the cost of different types of bulb</h2>
     <main>
       <section class="inc">
         <div>
