feat: Add the domain name to the page

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="assets/calculator.css">
   <script src="assets/angular.min.js"></script>
   <script src="assets/calculator.js"></script>
-  <title>Bulb Cost Calculator</title>
+  <title>BulbCompare.com</title>
 </head>
 
 <body>
   <div id="myCalculator" ng-controller="CalculatorController">
-    <h1>Bulb Cost Calculator</h1>
+    <h1>BulbCompare.com</h1>
     <h2>Compare the cost of different types of bulb</h2>
     <main>
       <section class="inc">
