feat: Add link to GitHub repository

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                value="{{currentHours}}">
       </div>
     </form>
+    <p><small>Fork this web app on
+      <a href="https://github.com/SteveWooding/angular-calc-tool.git">GitHub</a>.</small></p>
 
   </div>
 
