fix: Insert <br> tag into 'kilowatt-hour cost' text
On small screens, the input fields were not lining up,
due the lacking of a text line in the kWh column.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <div>
         <h4>kWh</h4>
-        <p>Kilowatt-hour cost</p>
+        <p>Kilowatt-hour <br>cost</p>
         <input type="number" ng-change="calculate()" ng-model="currentCost"
                value="{{currentCost}}"> pence
       </div>
