fix: Remove value parameter from number input tags
Noticed the browser was warning about the input values not being
a valid number. Looking at Angular documentation, noticed there
was no value parameter. Took it out, warning was cleared.
ng-model sets it, so value was trying to set it again.

--- a/index.html
+++ b/index.html
@@ -56,14 +56,12 @@
       <div>
         <h4>kWh</h4>
         <p>Kilowatt-hour <br>cost</p>
-        <input type="number" ng-change="calculate()" ng-model="currentCost"
-               value="{{currentCost}}"> pence
+        <input type="number" ng-change="calculate()" ng-model="currentCost"> pence
       </div>
       <div>
         <h4>Hours</h4>
         <p>Usage <br>per day</p>
-        <input type="number" ng-change="calculate()" ng-model="currentHours"
-               value="{{currentHours}}">
+        <input type="number" ng-change="calculate()" ng-model="currentHours">
       </div>
     </form>
     <p><small>Fork this web app on
