feat: Add bulb lifetime and total 10 year cost
Not too happy with the implmentation, extending the code style
of the instructor. May refactor it later.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <h4>Incandescent</h4>
           <p>{{incWattage}}</p>
           <p>{{incCost}}</p>
+          <p>{{incLife}}</p>
+          <p>{{inc10yCost}}</p>
         </div>
       </section>
       <section class="hal">
@@ -27,6 +29,8 @@
           <h4>Halogen</h4>
           <p>{{halWattage}}</p>
           <p>{{halCost}}</p>
+          <p>{{halLife}}</p>
+          <p>{{hal10yCost}}</p>
         </div>
       </section>
       <section class="cfl">
@@ -34,6 +38,8 @@
           <h4>CFL</h4>
           <p>{{cflWattage}}</p>
           <p>{{cflCost}}</p>
+          <p>{{cflLife}}</p>
+          <p>{{cfl10yCost}}</p>
         </div>
       </section>
       <section class="led">
@@ -41,6 +47,8 @@
           <h4>LED</h4>
           <p>{{ledWattage}}</p>
           <p>{{ledCost}}</p>
+          <p>{{ledLife}}</p>
+          <p>{{led10yCost}}</p>
         </div>
       </section>
     </main>
