--- a/index.html
+++ b/index.html
@@ -64,16 +64,19 @@
       <div>
         <h4>kWh</h4>
         <p>Kilowatt-hour <br>cost</p>
-        <input type="number" ng-change="CalcCtrl.calculate()" ng-model="CalcCtrl.currentCost"> pence
+        <input type="number" ng-change="CalcCtrl.calculate()"
+               ng-model="CalcCtrl.currentCost"> pence
       </div>
       <div>
         <h4>Hours</h4>
         <p>Usage <br>per day</p>
-        <input type="number" ng-change="CalcCtrl.calculate()" ng-model="CalcCtrl.currentHours">
+        <input type="number" ng-change="CalcCtrl.calculate()"
+               ng-model="CalcCtrl.currentHours">
       </div>
     </form>
     <p><small>Fork this web app on
-      <a href="https://github.com/SteveWooding/angular-calc-tool.git">GitHub</a>.</small></p>
+      <a href="https://github.com/SteveWooding/angular-calc-tool.git">GitHub</a>.
+    </small></p>
 
   </div>
 
